// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props iconType 1`] = `
<a
  className="euiLink synopsis"
  data-test-subj="homeSynopsisLinkgreat tutorial"
  href="link_to_item"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiIcon
        color="primary"
        size="xl"
        type="logoApache"
      />
    </EuiFlexItem>
    <EuiFlexItem
      className="synopsisContent"
      component="div"
      grow={true}
    >
      <EuiTitle
        className="synopsisTitle"
        size="xs"
        textTransform="none"
      >
        <h4>
          Great tutorial
        </h4>
      </EuiTitle>
      <EuiText
        className="synopsisBody"
        grow={true}
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            this is a great tutorial about...
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</a>
`;

exports[`props iconUrl 1`] = `
<a
  className="euiLink synopsis"
  data-test-subj="homeSynopsisLinkgreat tutorial"
  href="link_to_item"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <img
        alt=""
        className="synopsisIcon"
        src="icon_url"
      />
    </EuiFlexItem>
    <EuiFlexItem
      className="synopsisContent"
      component="div"
      grow={true}
    >
      <EuiTitle
        className="synopsisTitle"
        size="xs"
        textTransform="none"
      >
        <h4>
          Great tutorial
        </h4>
      </EuiTitle>
      <EuiText
        className="synopsisBody"
        grow={true}
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            this is a great tutorial about...
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</a>
`;

exports[`props isBeta 1`] = `
<a
  className="euiLink synopsis"
  data-test-subj="homeSynopsisLinkgreat tutorial"
  href="link_to_item"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      className="synopsisContent"
      component="div"
      grow={true}
    >
      <EuiTitle
        className="synopsisTitle"
        size="xs"
        textTransform="none"
      >
        <h4>
          Great tutorial
        </h4>
      </EuiTitle>
      <EuiText
        className="synopsisBody"
        grow={true}
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            this is a great tutorial about...
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</a>
`;

exports[`render 1`] = `
<a
  className="euiLink synopsis"
  data-test-subj="homeSynopsisLinkgreat tutorial"
  href="link_to_item"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      className="synopsisContent"
      component="div"
      grow={true}
    >
      <EuiTitle
        className="synopsisTitle"
        size="xs"
        textTransform="none"
      >
        <h4>
          Great tutorial
        </h4>
      </EuiTitle>
      <EuiText
        className="synopsisBody"
        grow={true}
        size="s"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            this is a great tutorial about...
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
</a>
`;
